--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imageProfile"
             android:layout_width="147dp"
             android:layout_height="100dp"
-            android:src="@drawable/ic_annoncement_list"
+            android:src="@drawable/ic_announcement"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -24,8 +24,8 @@
 
         <TextView
             android:id="@+id/announcementTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="Title"
             android:textAllCaps="true"
             android:textSize="30dp"
@@ -35,17 +35,24 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <LinearLayout
-            android:id="@+id/announcementList"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp"
+        <ImageView
+            android:id="@+id/announcementIcon"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_image_missing"
             app:layout_constraintTop_toBottomOf="@id/announcementTitle"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/annoncementDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Description"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@id/announcementTitle"
+            app:layout_constraintLeft_toRightOf="@id/announcementIcon"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
