--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/imageProfile"
-            android:layout_width="147dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:src="@drawable/ic_annoncement_list"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -46,6 +46,19 @@
             app:layout_constraintLeft_toLeftOf="parent">
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/createAnnouncementButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/circle_button"
+            android:drawableTop="@drawable/ic_announcement_create"
+            android:padding="15dp"
+            android:backgroundTint="@color/design_default_color_secondary"
+            android:drawableTint="@color/design_default_color_secondary"
+            app:layout_constraintTop_toBottomOf="@id/announcementList"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
