--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -56,6 +56,7 @@
             android:padding="15dp"
             android:backgroundTint="@color/design_default_color_secondary"
             android:drawableTint="@color/design_default_color_secondary"
+            android:layout_marginVertical="10dp"
             app:layout_constraintTop_toBottomOf="@id/announcementList"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
