--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -89,11 +89,11 @@
             app:layout_constraintTop_toBottomOf="@id/HadOrNeededSwitch"/>
 
         <Button
-            android:id="@+id/createAnnouncementButton"
+            android:id="@+id/addPhotoButton"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="@drawable/circle_button"
-            android:drawableTop="@drawable/ic_announcement_create"
+            android:drawableTop="@drawable/ic_add_photo"
             android:padding="15dp"
             android:backgroundTint="@color/design_default_color_secondary"
             android:drawableTint="@color/design_default_color_secondary"
@@ -101,6 +101,18 @@
             app:layout_constraintTop_toBottomOf="@id/enterDescription"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <LinearLayout
+            android:id="@+id/photoList"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toBottomOf="@id/addPhotoButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
