--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -98,9 +98,23 @@
             android:backgroundTint="@color/design_default_color_secondary"
             android:drawableTint="@color/design_default_color_secondary"
             android:layout_marginVertical="10dp"
+            android:layout_marginLeft="20dp"
             app:layout_constraintTop_toBottomOf="@id/enterDescription"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <Button
+            android:id="@+id/createAnnouncementButton"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:drawableLeft="@drawable/ic_publish"
+            android:text="publish announcement"
+            android:padding="15dp"
+            android:backgroundTint="@color/design_default_color_primary"
+            android:drawableTint="@color/design_default_color_secondary"
+            android:layout_marginVertical="10dp"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toBottomOf="@id/enterDescription"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <LinearLayout
             android:id="@+id/photoList"
