--- a/app/src/main/res/layout/announcementitem.xml
+++ b/app/src/main/res/layout/announcementitem.xml
@@ -9,28 +9,25 @@
 
     <ImageView
         android:id="@+id/announcementIcon"
-        android:layout_width="140dp"
-        android:layout_height="110dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/ic_image_missing"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
         android:id="@+id/annoncementTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:text="Error 404"
         android:textSize="25dp"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintLeft_toRightOf="@+id/announcementIcon"
-        app:layout_constraintTop_toTopOf="@+id/announcementIcon"/>
-
-    <TextView
-        android:id="@+id/annoncementDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Error 404"
-        android:textSize="15dp"
-        app:layout_constraintLeft_toRightOf="@+id/announcementIcon"
-        app:layout_constraintTop_toBottomOf="@+id/annoncementTitle"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/announcementIcon"
+        app:layout_constraintBottom_toBottomOf="@id/announcementIcon"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
