--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -35,24 +35,64 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <ImageView
-            android:id="@+id/announcementIcon"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/ic_image_missing"
+        <com.smarteist.autoimageslider.SliderView
+            android:id="@+id/imageSlider"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:layout_margin="20dp"
+            app:sliderAnimationDuration="600"
+            app:sliderIndicatorAnimationDuration="600"
+            app:sliderIndicatorGravity="center_horizontal|bottom"
+            app:sliderIndicatorMargin="15dp"
+            app:sliderIndicatorOrientation="horizontal"
+            app:sliderIndicatorPadding="3dp"
+            app:sliderIndicatorRadius="2dp"
+            app:sliderIndicatorSelectedColor="@color/design_default_color_primary"
+            app:sliderIndicatorUnselectedColor="@color/design_default_color_secondary"
             app:layout_constraintTop_toBottomOf="@id/announcementTitle"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+            android:id="@+id/DescriptionTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:textAllCaps="true"
+            android:textSize="22dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageSlider"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
             android:id="@+id/annoncementDescription"
-            android:layout_width="190dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginBottom="20dp"
             android:text="Description prova prova prova prova prova prova prova prova"
             android:textSize="17dp"
-            app:layout_constraintTop_toBottomOf="@id/announcementTitle"
-            app:layout_constraintLeft_toRightOf="@id/announcementIcon"
+            app:layout_constraintTop_toBottomOf="@id/DescriptionTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+
+        <Button
+            android:id="@+id/answerAnnouncementButton"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:drawableLeft="@drawable/ic_message"
+            android:text="answer"
+            android:padding="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="100dp"
+            android:backgroundTint="@color/design_default_color_primary"
+            android:drawableTint="@color/design_default_color_secondary"
+            app:layout_constraintTop_toBottomOf="@id/annoncementDescription"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
