--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -20,10 +20,10 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/fragment_notification"/>
+            app:layout_constraintBottom_toTopOf="@id/chat_list"/>
 
         <LinearLayout
-            android:id="@+id/fragment_notification"
+            android:id="@+id/chat_list"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
