--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -20,10 +20,10 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/linearLayout"/>
+            app:layout_constraintBottom_toTopOf="@id/GroupList"/>
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/GroupList"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -42,6 +42,38 @@
                 android:textAlignment="center"/>
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/createGroupButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/circle_button"
+            android:drawableTop="@drawable/ic_create_group"
+            android:padding="15dp"
+            android:backgroundTint="@color/design_default_color_secondary"
+            android:drawableTint="@color/design_default_color_secondary"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="100dp"
+            app:layout_constraintTop_toBottomOf="@id/GroupList"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/searchGroupButton"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <Button
+            android:id="@+id/searchGroupButton"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/circle_button"
+            android:drawableTop="@drawable/ic_group_search"
+            android:padding="15dp"
+            android:backgroundTint="@color/design_default_color_secondary"
+            android:drawableTint="@color/design_default_color_secondary"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="100dp"
+            app:layout_constraintTop_toBottomOf="@id/GroupList"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/createGroupButton"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
