--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,52 +32,30 @@
             android:textColor="#FFFFFF"
             android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@id/imageProfile"
-            app:layout_constraintBottom_toTopOf="@id/Username"
+            app:layout_constraintBottom_toTopOf="@id/Name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <TextView
-            android:id="@+id/Username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Username:"
-            android:textSize="23sp"
-            android:textStyle="bold"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profile"
-            app:layout_constraintBottom_toTopOf="@id/Email"/>
-
-        <TextView
-            android:id="@+id/UsernameFill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="prova"
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@id/Username"
-            app:layout_constraintBottom_toBottomOf="@+id/Username"/>
 
         <TextView
             android:id="@+id/Email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email:"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="30dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Username"
-            app:layout_constraintBottom_toTopOf="@id/Name"/>
+            app:layout_constraintTop_toBottomOf="@+id/SurnameFill"
+            app:layout_constraintBottom_toTopOf="@id/BirthDate"/>
 
         <TextView
             android:id="@+id/EmailFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="prova"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/Email"
             app:layout_constraintBottom_toBottomOf="@+id/Email"/>
@@ -87,12 +65,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name:"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="30dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Email"
+            app:layout_constraintTop_toBottomOf="@+id/profile"
             app:layout_constraintBottom_toTopOf="@id/Surname"/>
 
         <TextView
@@ -100,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="prova"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/Name"
             app:layout_constraintBottom_toBottomOf="@+id/Name"/>
@@ -111,20 +89,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Surname:"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="30dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Name"
-            app:layout_constraintBottom_toTopOf="@id/BirthDate"/>
+            app:layout_constraintBottom_toTopOf="@id/Email"/>
 
         <TextView
             android:id="@+id/SurnameFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="prova"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/Surname"
             app:layout_constraintBottom_toBottomOf="@+id/Surname"/>
@@ -135,19 +112,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="BirthDate:"
-            android:textSize="23sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="25dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginLeft="30dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Surname"/>
+            app:layout_constraintTop_toBottomOf="@+id/Email"/>
 
         <TextView
             android:id="@+id/BirthDateFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="prova"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/BirthDate"
             app:layout_constraintBottom_toBottomOf="@+id/BirthDate"/>
