--- a/app/src/main/res/layout/announcementitem.xml
+++ b/app/src/main/res/layout/announcementitem.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:layout_marginVertical="5dp"
+    android:background="@drawable/border"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
@@ -14,9 +14,11 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/ic_image_missing"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/annoncementTitle"
@@ -27,7 +29,30 @@
         android:layout_marginHorizontal="10dp"
         app:layout_constraintLeft_toRightOf="@+id/announcementIcon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/announcementIcon"
-        app:layout_constraintBottom_toBottomOf="@id/announcementIcon"/>
+        app:layout_constraintTop_toTopOf="@+id/announcementIcon"/>
+
+    <TextView
+        android:id="@+id/annoncementCreator"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:text="Error 404"
+        android:textSize="20dp"
+        android:layout_margin="10dp"
+        app:layout_constraintLeft_toRightOf="@+id/announcementIcon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HasOrNeed"/>
+
+    <TextView
+        android:id="@+id/HasOrNeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HAS THIS"
+        android:textAllCaps="true"
+        android:layout_margin="10dp"
+        android:textColor="@color/green"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/annoncementTitle"
+        app:layout_constraintLeft_toRightOf="@id/announcementIcon"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
