--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -54,15 +54,53 @@
             app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
-            android:id="@+id/DescriptionTitle"
-            android:layout_width="match_parent"
+            android:id="@+id/CreatorTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
+            android:text="Creator:"
             android:textAllCaps="true"
             android:textSize="22dp"
             android:layout_marginHorizontal="40dp"
             android:layout_marginVertical="20dp"
             app:layout_constraintTop_toBottomOf="@+id/imageSlider"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/CreatorDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:text="Error 404"
+            android:textSize="17dp"
+            app:layout_constraintTop_toTopOf="@id/CreatorTitle"
+            app:layout_constraintBottom_toBottomOf="@id/CreatorTitle"
+            app:layout_constraintLeft_toRightOf="@id/CreatorTitle"/>
+
+        <TextView
+            android:id="@+id/HasOrNeed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HAS THIS"
+            android:textAllCaps="true"
+            android:textColor="@color/green"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/CreatorDescription"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+            android:id="@+id/DescriptionTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description:"
+            android:textAllCaps="true"
+            android:textSize="22dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/HasOrNeed"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
