--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,7 +54,7 @@
             android:id="@+id/EmailFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prova"
+            android:text="Error 404"
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/Email"
@@ -77,7 +77,7 @@
             android:id="@+id/NameFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prova"
+            android:text="Error 404"
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/Name"
@@ -100,7 +100,7 @@
             android:id="@+id/SurnameFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prova"
+            android:text="Error 404"
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/Surname"
@@ -123,11 +123,27 @@
             android:id="@+id/BirthDateFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prova"
+            android:text="Error 404"
             android:textSize="18sp"
             android:layout_marginLeft="10dp"
             app:layout_constraintLeft_toRightOf="@id/BirthDate"
             app:layout_constraintBottom_toBottomOf="@+id/BirthDate"/>
+
+        <Button
+            android:id="@+id/yourAnnouncementsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:drawableLeft="@drawable/ic_annoncement_list"
+            android:text="your announcements"
+            android:padding="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="100dp"
+            android:backgroundTint="@color/design_default_color_primary"
+            android:drawableTint="@color/design_default_color_secondary"
+            app:layout_constraintTop_toBottomOf="@id/BirthDate"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
